Implement media attachments with MinIO tested on docker file and k8s, (remaining README.md)
This commit introduces the capability for users to send media attachments (initially images) in chat rooms. The feature is architected around a new internal media microservice, MinIO for S3-compatible object storage, and a direct-client-upload flow using presigned URLs.

### Backend

- **New `backend-media` Service**: A new Spring Boot microservice is added to handle all interactions with MinIO. It generates presigned URLs and verifies uploads, but is only accessible internally.
- **New `chat-app-backend` Endpoint**: Adds a `POST /api/rooms/{roomId}/media/upload-url` endpoint for clients to request an upload URL. The main backend now orchestrates the media upload flow.
- **Media Lifecycle Management**: Introduces a `MediaMetadata` entity in the main backend's PostgreSQL database to track the state of uploads from `PENDING` to `ACTIVE`.
- **Database & Models**:
    - Updates the `Message` document in MongoDB to include an `attachments` array.
    - Adds DTOs (`MediaUploadRequest`, `MediaUploadResponse`, `MediaAttachmentDto`) to support the new flow.
- **WebSocket Enhancement**: The `ChatMessagePayload` is updated to carry media information, and the `MessageService` now verifies the media upload before broadcasting the message.

### Infrastructure (Docker & Nginx)

- **Docker Compose**:
    - Integrates `minio` and a new `backend-media` service.
    - Segregates the Docker network into `public-network` and `internal-network` to secure the media service.
- **Nginx**:
    - Adds a `/minio/` location block to proxy requests to MinIO, enabling direct client uploads and console access.
    - Configures CORS and increases `client_max_body_size` to support large file uploads.

### Frontend

- **Image Upload Flow**:
    - Integrates the `image_picker` and `mime` packages to allow users to select images from their gallery.
    - Implements a `MediaUploadNotifier` to manage the state of 

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,37 @@
-# --- Spring profile ---
-SPRING_PROFILES_ACTIVE=prod
-
-# --- Postgres ---
+# Database Configuration
 DB_HOST=postgres
 DB_PORT=5432
-DB_NAME=<username>
-DB_USER=<password>
-DB_PASS=<authDatabase>
+DB_NAME=chatapp
+DB_USER=chatuser
+DB_PASS=chatpass
 
-# --- Mongo ---
+# MongoDB Configuration
 MONGO_HOST=mongo
 MONGO_PORT=27017
+MONGO_USER=chatuser
+MONGO_PASSWORD=chatpass
 MONGO_DB=chatapp
-# If you enable auth later:
-MONGO_USER=<username>
-MONGO_PASSWORD=<password>
-MONGO_AUTH_DB=<authDatabase>
+MONGO_AUTH_DB=admin
 
-# --- Redis ---
+# Redis Configuration
 REDIS_HOST=redis
 REDIS_PORT=6379
 
-# --- JWT ---
-JWT_SECRET=mysecretkey
-JWT_EXPIRATION=86400
+# JWT Configuration
+JWT_SECRET=my-secret9274923874923847294823
+JWT_EXPIRATION=604800
+
+# Spring Profile
+SPRING_PROFILES_ACTIVE=prod
+
+# MinIO Configuration (NEW)
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
+MINIO_BUCKET=chat-media
+MINIO_REGION=us-east-1
+MINIO_PUBLIC_URL=http://localhost/minio
+
+# Media Service Configuration (NEW)
+MEDIA_MAX_FILE_SIZE=2147483648
+MEDIA_ALLOWED_MIME_TYPES=image/jpeg,image/png,image/webp,image/gif
+MEDIA_SERVICE_TOKEN=your-secure-backend-media-token-here
