--- a/chat-app-backend/Dockerfile
+++ b/chat-app-backend/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 # Copy Maven wrapper and pom.xml
 COPY mvnw ./
 COPY mvnw.cmd ./
-COPY .mvn .mvn
+COPY .mvn .mvn/
 COPY pom.xml ./
 
 # Download dependencies
