--- a/chat-app-frontend/pubspec.yaml
+++ b/chat-app-frontend/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   stomp_dart_client: ^1.0.0
   provider: ^6.1.1
   flutter_svg: ^2.0.9
+  image_picker: ^1.0.7
+  mime: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -65,9 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
