--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -93,12 +93,12 @@ spec:
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
-                  name: chat-app-secrets
+                  name: chat-app-secret
                   key: DB_USER
             - name: DB_PASS
               valueFrom:
                 secretKeyRef:
-                  name: chat-app-secrets
+                  name: chat-app-secret
                   key: DB_PASS
             - name: MONGO_HOST
               valueFrom:
@@ -113,12 +113,12 @@ spec:
             - name: MONGO_USER
               valueFrom:
                 secretKeyRef:
-                  name: chat-app-secrets
+                  name: chat-app-secret
                   key: MONGO_USER
             - name: MONGO_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: chat-app-secrets
+                  name: chat-app-secret
                   key: MONGO_PASSWORD
             - name: MONGO_DB
               valueFrom:
@@ -143,13 +143,18 @@ spec:
             - name: JWT_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: chat-app-secrets
+                  name: chat-app-secret
                   key: JWT_SECRET
             - name: JWT_EXPIRATION
               valueFrom:
                 configMapKeyRef:
                   name: chat-app-config
                   key: JWT_EXPIRATION
+            - name: MEDIA_SERVICE_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: chat-app-secret
+                  key: MEDIA_SERVICE_TOKEN
 
           startupProbe:
             httpGet:
