--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: chat-app-secrets
+  name: chat-app-secret
   namespace: chat-app
 type: Opaque
 data:
@@ -10,3 +10,6 @@ data:
   MONGO_USER: "${MONGO_USER_B64}"
   MONGO_PASSWORD: "${MONGO_PASSWORD_B64}"
   JWT_SECRET: "${JWT_SECRET_B64}"
+  MINIO_ROOT_USER: "${MINIO_ROOT_USER_B64}"
+  MINIO_ROOT_PASSWORD: "${MINIO_ROOT_PASSWORD_B64}"
+  MEDIA_SERVICE_TOKEN: "${MEDIA_SERVICE_TOKEN_B64}"
