--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,18 +1,30 @@
 events {}
 
 http {
+    # 1. Map logic OUTSIDE the server block
+    # This is safer and faster than 'if' inside location
+    map $http_origin $cors_origin {
+        default "";
+        "~^https?://localhost(:[0-9]+)?$" "$http_origin";
+        "~^https?://chat\.abhishek\.com(:[0-9]+)?$" "$http_origin";
+        "~^http://chat\.abhishek\.com(:[0-9]+)?$" "$http_origin";
+    }
+
     server {
         listen 80;
         server_name localhost;
 
+        # Frontend
         location / {
             proxy_pass http://frontend:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            client_max_body_size 5M;
         }
 
+        # Chat Backend API
         location ^~ /backend/ {
             rewrite ^/backend/(.*) /$1 break;
             proxy_pass http://backend:8080;
@@ -24,6 +36,57 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            client_max_body_size 5M;
+        }
+
+        # MinIO S3 API and Console
+        location ^~ /minio/ {
+            rewrite ^/minio/(.*) /$1 break;
+            proxy_pass http://minio:9000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # --- CORS Configuration Start ---
+
+            # 1. Determine Allowed Origin
+            # Matches localhost (with any port) OR chat.abhishek.com
+            # set $cors_origin "";
+            # if ($http_origin ~* "^http?://(localhost|chat\.abhishek\.com)(:[0-9]+)?$") {
+            #     set $cors_origin $http_origin;
+            # }
+
+            # 2. Hide Upstream Headers (Prevent Duplicates from MinIO)
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+
+            # Add headers using the mapped variable
+            # If $cors_origin is empty, this header is skipped (Blocking CORS)
+            add_header Access-Control-Allow-Origin "$cors_origin" always;
+            add_header Access-Control-Allow-Methods "GET, PUT, POST, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, x-amz-content-sha256, x-amz-date" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+
+            # 4. Handle Preflight OPTIONS
+            if ($request_method = OPTIONS) {
+                # Repeat headers because 'if' clears inherited headers in NGINX
+                add_header Access-Control-Allow-Origin "$cors_origin" always;
+                add_header Access-Control-Allow-Methods "GET, PUT, POST, DELETE, OPTIONS" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization, x-amz-content-sha256, x-amz-date" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+            # --- CORS Configuration End ---
+
+            # Increase timeouts for file uploads
+            proxy_read_timeout 3600;
+            proxy_send_timeout 3600;
+            client_max_body_size 2048M;
         }
     }
 }
